# graphics_lib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json
arch/: dev.drawio
include/: graphics.h  matrix.h
src/: graphics.cpp  main.cpp  matrix.cpp  windows.cpp
